methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:5: error: value gauche is not a member of Unit
possible cause: maybe a semicolon is missing before `value gauche'?
  } gauche();avance();avance();avance();avance();avance()
    ^